# teams-mcp

./: .dockerignore  .env.example  .env.oauth21  .gitignore  DOCKER_DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  Makefile.docker  README.md  TEAMS_TOOLS_GUIDE.md  __init__.py  concept.md  docker-compose.yaml  main.py  pyproject.toml  setup-dev.sh
auth/: auth_info_middleware.py  fastmcp_microsoft_auth.py  mcp_session_middleware.py  oauth21_session_store.py  oauth_callback_server.py  oauth_common_handlers.py.bak  oauth_config.py  oauth_error_handling.py  oauth_responses.py  oauth_types.py  scopes.py  service_decorator_teams.py  teams_auth.py
core/: config.py  server.py
teams/: __init__.py  auth_tools.py  chat_tools.py  search_tools.py  teams_tools.py  users_tools.py
